# minitalk

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.org  chat.org  client  compile_commands.json  minitalk.h  server  server.c  server.c.bak  test_server.cpp
includes/: minitalk.h
libft/: ft_abs.c  ft_putnbr_fd.c  ft_strjoin.c  get_next_line.c  libft.h
roam/: 20241101182545-unix_signals.org  20241101182809-sigint.org  20241101182825-sigterm.org  20241101182843-sigkill.org  20241101182859-sigchld.org  20241101183016-sigusr1.org  20241101183230-signal_function.org  20241101183243-sigaction_function.org  20241101183829-kill_standard_c_library_function.org  20241101184028-raise_standard_library_c_function.org  20241101190637-processes.org  20241101190722-ps_command.org  20241103081727-pause_function.org  20241103104421-sigstop.org  20241103105359-sigaction_struct.org  20241103105735-sig_dfl.org  20241103105739-sig_ign.org  20241103110007-sa_flags.org  20241103111414-modifying_sigset_t.org  20241103111432-sigemptyset_function.org  20241103111443-sigaddset_function.org  20241103181348-siginfo_t.org  20241103181435-ucontext_t.org  20241205191515-volatile.org  20241206155330-sending_signals_in_c.org  20241206161854-sa_nocldstop.org  20241206162114-sigtstp.org  20241206162201-sigcont.org  20241206192918-sa_siginfo.org
run/: client_main.c  server_main.c
src/: client.c  client_main.c  error_handling_client.c  server.c  server_main.c  signal_handler_client.c  signal_handler_server.c
tests/: client_long_input.txt  create_long_input.py  srv_output.txt  (+8 more)
(+2 files in other folders)
